HW0: Changes after 1-st review