@@ -7,6 +7,7 @@ import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.Month;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static ru.javawebinar.topjava.util.TimeUtil.isBetweenHalfOpen;
 
@@ -29,47 +30,45 @@ public class UserMealsUtil {
     }
 
     public static List<UserMealWithExcess> filteredByCycles(List<UserMeal> meals, LocalTime startTime, LocalTime endTime, int caloriesPerDay) {
-        Map<Integer, Integer> totalCaloriesPerDay = new HashMap<>();
-        List<UserMeal> filteredMeals = new ArrayList<>();
+        Map<String, Integer> totalCaloriesPerDay = new HashMap<>();
 
-        // Filter meals by the given time range
+        // Accumulate total daily calories
         for (UserMeal meal : meals) {
-            if (isBetweenHalfOpen(meal.getDateTime().toLocalTime(), startTime, endTime)) filteredMeals.add(meal);
-
-            // Accumulate total daily calories while filtering
-            var currentCalories = totalCaloriesPerDay.getOrDefault(meal.getDay(), 0);
-            totalCaloriesPerDay.put(meal.getDay(), currentCalories + meal.getCalories());
+            int currentCalories = totalCaloriesPerDay.getOrDefault(dayIndex(meal), 0);
+            totalCaloriesPerDay.put(dayIndex(meal), currentCalories + meal.getCalories());
         }
 
         List<UserMealWithExcess> mealsWithExcess = new ArrayList<>();
 
-        for (UserMeal meal : filteredMeals) {
-            mealsWithExcess.add(
-                    toUserMealWithExcess(meal, totalCaloriesPerDay.get(meal.getDay()) > caloriesPerDay)
-            );
+        for (UserMeal meal : meals) {
+            if (isBetweenHalfOpen(meal.getDateTime().toLocalTime(), startTime, endTime)) {
+                mealsWithExcess.add(
+                        toUserMealWithExcess(meal, totalCaloriesPerDay.get(dayIndex(meal)) > caloriesPerDay)
+                );
+            }
         }
 
         return mealsWithExcess;
     }
 
     public static List<UserMealWithExcess> filteredByStreams(List<UserMeal> meals, LocalTime startTime, LocalTime endTime, int caloriesPerDay) {
-        Map<Integer, Integer> totalCaloriesPerDay = new HashMap<>();
-
-        // Filter meals by the given time range
-        var filteredMeals = meals.stream().filter(meal -> {
-            // Accumulate total daily calories while filtering
-            var currentCalories = totalCaloriesPerDay.getOrDefault(meal.getDay(), 0);
-            totalCaloriesPerDay.put(meal.getDay(), currentCalories + meal.getCalories());
-
-            return isBetweenHalfOpen(meal.getDateTime().toLocalTime(), startTime, endTime);
-        }).toList();
-
-        return filteredMeals.stream().map(
-                meal -> toUserMealWithExcess(meal, totalCaloriesPerDay.get(meal.getDay()) > caloriesPerDay)
-        ).toList();
+        HashMap<String, Integer> totalCaloriesPerDay = meals.stream().collect(
+                () -> new HashMap<String, Integer>(),
+                (result, meal) -> result.merge(dayIndex(meal), meal.getCalories(), Integer::sum),
+                (result1, result2) -> result2.forEach((key, value) -> result1.merge(key, value, Integer::sum))
+        );
+e
+        return meals.stream()
+                .filter(meal -> isBetweenHalfOpen(meal.getDateTime().toLocalTime(), startTime, endTime))
+                .map(meal -> toUserMealWithExcess(meal, totalCaloriesPerDay.get(dayIndex(meal)) > caloriesPerDay))
+                .collect(Collectors.toList());
     }
 
     private static UserMealWithExcess toUserMealWithExcess(UserMeal meal, boolean excess) {
         return new UserMealWithExcess(meal.getDateTime(), meal.getDescription(), meal.getCalories(), excess);
+    }
+
+    private static String dayIndex(UserMeal meal) {
+        return meal.getDateTime().getYear() + "-" + meal.getDateTime().getDayOfYear();
     }
 }
